# deppy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
analyser/: CMakeLists.txt  DebugInfo.cpp  DebugInfo.h  DependenceResults.cpp  DependenceResults.h  DynamicGcd.cpp  DynamicGcd.h  Event.h  Logger.cpp  Logger.h  Loop.cpp  Loop.h  Main.cpp  MemoryAccess.h  MemoryRef.h  Point.h  PointLoop.cpp  PointLoop.h  Stride.cpp  Stride.h  StrideDetector.cpp  StrideDetector.h  StrideLoop.cpp  StrideLoop.h  deppy.cpp  types.h
examples/: example1.c  example10.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  example8.c  example9.c  extra.c
lib/: BoundedBuffer.hpp  event.h  gcd.cpp  gcd.h
test/: CMakeLists.txt  instrument.sh  test_analyser.cpp  test_lib.cpp
tracer/: CMakeLists.txt  ccinst  example.c  example1.c  instrument.sh  tracerdefs.h  tracerlib.c  tracerlib.h
tracer/instrument/: CMakeLists.txt  InstrumentPass.cpp
tracer/loopinstrument/: CMakeLists.txt  LoopInstrumentPass.cpp
tracer/meminstrument/: CMakeLists.txt  MemInstrumentPass.cpp
